pkg/ibmvpc/examples/out/analysis_out/sg_testing1_new_respond_partly_all_vpcs__with_grouping.txt
Endpoint connectivity for VPC test-vpc1-ky
Public Internet 147.235.219.206/32 => vsi2-ky[10.240.20.4] : protocol: TCP dst-ports: 22
db-endpoint-gateway-ky[10.240.30.6],vsi3a-ky[10.240.30.5],vsi3b-ky[10.240.30.4] => db-endpoint-gateway-ky[10.240.30.6],vsi3a-ky[10.240.30.5] : All Connections
db-endpoint-gateway-ky[10.240.30.6],vsi3a-ky[10.240.30.5],vsi3b-ky[10.240.30.4] => vsi1-ky[10.240.10.4] : protocol: ICMP,UDP; protocol: TCP src-ports: 100-200 dst-ports: 10-50
db-endpoint-gateway-ky[10.240.30.6],vsi3a-ky[10.240.30.5],vsi3b-ky[10.240.30.4] => vsi1-ky[10.240.10.4] : protocol: TCP src-ports: 1-99,201-65535; protocol: TCP src-ports: 100-200 dst-ports: 1-9,51-65535 * 
vsi2-ky[10.240.20.4] => Public Internet 142.0.0.0/8 : protocol: ICMP
vsi2-ky[10.240.20.4] => vsi1-ky[10.240.10.4] : protocol: ICMP,UDP; protocol: TCP src-ports: 100-200 dst-ports: 1-50
vsi2-ky[10.240.20.4] => vsi1-ky[10.240.10.4] : protocol: TCP src-ports: 1-99,201-65535; protocol: TCP src-ports: 100-200 dst-ports: 51-65535 * 
vsi2-ky[10.240.20.4] => vsi3b-ky[10.240.30.4] : protocol: TCP src-ports: 10-60 dst-ports: 100-220
vsi3b-ky[10.240.30.4] => vsi2-ky[10.240.20.4] : protocol: TCP src-ports: 1-99,221-65535; protocol: TCP src-ports: 100-220 dst-ports: 1-9,61-65535 * 
vsi3b-ky[10.240.30.4] => vsi2-ky[10.240.20.4] : protocol: TCP src-ports: 100-220 dst-ports: 10-60

connections are responsive (on TCP) unless marked with *
